# face_view

./: .gitignore  Base64.cpp  Base64.h  CMakeLists.txt  CfgData.cpp  CfgData.h  FaceViewServer.cpp  FaceViewServer.h  FaceViewWindow.cpp  FaceViewWindow.h  Logger.cpp  Logger.h  ThreadSafeArray.h  configure.xml  main.cpp
gsoap/: CMakeLists.txt  json.h  soapC.cpp  soapH.h  soapStub.h
res/: CMakeLists.txt
